# hycom-downloader

./: README.md  __main__.py  dates_generator.py  hycom-url.txt  links_generator.py  pyproject.toml
app/: __main__.py  downloader.ipynb
src/: dates_generator.py  links_generator.py
